--- a/package.json
+++ b/package.json
@@ -47,10 +47,13 @@
     }
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "electron-compile": "^6.4.4",
     "electron-squirrel-startup": "^1.0.0",
+    "formik": "^2.1.4",
     "react": "^16.8.3",
-    "react-dom": "^16.8.3"
+    "react-dom": "^16.8.3",
+    "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
     "babel-plugin-transform-async-to-generator": "^6.24.1",
